<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimesheetSubmissionFormActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSplashImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/submission_form"
        android:textColor="#000000"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitleBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineSplashImageBottom"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEntryTypeFeildTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <TextView
        android:id="@+id/EntryType"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/entry_type"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/EntryTypeSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineEntryTypeFeildTop" />

    <Spinner
        android:id="@+id/EntryTypeSelection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/entry_type"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/guidelineEntryTypeFieldBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/EntryType"
        app:layout_constraintTop_toBottomOf="@+id/EntryType" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEntryTypeFieldBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDateFieldTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/DateEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineDateFieldTop" />

    <EditText
        android:id="@+id/DateEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners_edittext"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/null_date"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDateFeildBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date"
        tools:ignore="TextFields"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDateFeildBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTimeFieldTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/StartTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/start_time"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/StartTimeEdit"
        app:layout_constraintEnd_toStartOf="@+id/EndTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTimeFieldTop" />

    <EditText
        android:id="@+id/StartTimeEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corners_edittext"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/null_time"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTimeFieldBottom"
        app:layout_constraintEnd_toStartOf="@+id/EndTimeEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartTime"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/EndTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:text="@string/end_time"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/EndTimeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/StartTime"
        app:layout_constraintTop_toTopOf="@+id/guidelineTimeFieldTop" />

    <EditText
        android:id="@+id/EndTimeEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners_edittext"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/null_time"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTimeFieldBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/StartTimeEdit"
        app:layout_constraintTop_toBottomOf="@+id/EndTime"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTimeFieldBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineJobNameFieldTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <TextView
        android:id="@+id/JobName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:labelFor="@id/JobNameEdit"
        android:paddingTop="2dp"
        android:text="@string/job_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/JobNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineJobNameFieldTop" />

    <EditText
        android:id="@+id/JobNameEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners_edittext"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guidelineJobNameFieldBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JobName"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineJobNameFieldBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExpensesFieldTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <TextView
        android:id="@+id/Expenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:labelFor="@id/ExpensesEdit"
        android:paddingTop="2dp"
        android:text="@string/expenses"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ExpensesEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineExpensesFieldTop" />

    <EditText
        android:id="@+id/ExpensesEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners_edittext"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExpensesFieldBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Expenses"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExpensesFieldBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineAttachFileButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <Button
        android:id="@+id/ButtonAttachFile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="true"
        android:onClick="AttachFile"
        android:text="@string/attach_a_file"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineAttachFileButtonTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSelectedFileBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonSubmitTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90697676" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSelctedFileRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="182dp" />

    <TextView
        android:id="@+id/SelectedFile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/selected_file"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSelectedFileBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpensesEdit"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/FileSize"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/file_size"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonSubmit"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSelctedFileRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectedFile"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/ChangeFile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/change_file"
        android:textColor="@color/colorLink"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineSelctedFileRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineSelectedFileBottom"
        tools:visibility="gone" />

    <Button
        android:id="@+id/ButtonSubmit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/main_button_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ButtonAttachFile"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonSubmitTop"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>