<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/SplashImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:transitionName="SplashAnim"
        app:layout_constraintBottom_toTopOf="@id/guidelineSplashImageBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="contentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSplashImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sign_in"
        android:textColor="#000000"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitleBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineSplashImageBottom"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.cardview.widget.CardView
        android:id="@+id/SignBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCardBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTitleBottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEmailTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.13" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners_edittext"
                android:drawableStart="@drawable/ic_email_grey_24dp"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/guidelineEmailBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineEmailTop"
                tools:targetApi="o" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEmailBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinePasswordTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.44" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners_edittext"
                android:drawableStart="@drawable/ic_lock_grey_24dp"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/guidelinePasswordBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelinePasswordTop"
                android:importantForAutofill="no" tools:targetApi="o" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinePasswordBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.64" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBodyFooterTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.69" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBodyFooterBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.86" />

            <CheckBox
                android:id="@+id/RememberMeCheckBox"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:text="@string/remember_me"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineBodyFooterBottom"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineBodyFooterTop" />

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|end"
                android:text="@string/forgot_password"
                android:textColor="@color/colorLink"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineBodyFooterBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/guidelineBodyFooterTop" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50121653" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCardBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignInRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignInTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/main_button_background"
        android:onClick="SignIn"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSignInBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSignInRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInLeft"
        app:layout_constraintTop_toBottomOf="@+id/guidelineSignInTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignInBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignInLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFooterTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <TextView
        android:id="@+id/NoAccountYet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/no_account_yet"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineFooterBottom"
        app:layout_constraintEnd_toStartOf="@+id/SignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineFooterTop" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="SignUp"
        android:text="@string/sign_up"
        android:textColor="@color/colorLink"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineFooterBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toEndOf="@+id/NoAccountYet"
        app:layout_constraintTop_toTopOf="@+id/guidelineFooterTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFooterBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>